2007-01-31  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/udp_tcl.c: Turns out the HP-UX patch break buiding on
	AIX so made the check more specific (from Jeff Hobbs again).

2007-01-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/udp_tcl.c: Applied HP-UX patch #1639930 from tclguy.

2006-07-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/udp_tcl.c: Added some timing to tests and changed the
	* tests/udp-srv.tcl: service name lookup (was very slow on linux)

2006-06-20  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* TAG:      ==== tcludp-1_0_8 ====
        * RELEASE:  Released version 1.0.8

2006-06-20  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/udp_tcl.c:  Stick to ckalloc/ckfree.
	* tests/udp-srv.test: Added new test file which runs a child
	                      proces as a udp server.
	* tests/all.tcl:      Support 8.2 and 8.3 test package.

2006-05-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* aclocal.m4:        Added check for fcntl.h and the FD_CLOEXEC flag
	* generic/udp_tcl.c: bug #1477669 - set the close-on-exec flag for 
	                     the socket to avoid child processes inheriting
	                     our sockets
	* configure:         Regenerated with autoconf 2.59
	* configure.in:      Added call to project specific code.
	* tclconfig/tcl.m4:  Updated

2006-03-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tclconfig/*:        Updated to TEA 3.5
	* configure:          Regenerated.
	* generic/udp_tcl.c:  Applied patch from bug #1245141 to use
	                      socklen_t type correctly (Tru64 uses a
	                      64bit long for socklen_t)
	* generic/udp_tcl.c:  Included a Udp_SafeInit function. Some versions
	                      of MacOSX are wierd about apps testing for
	                      missing functions in shared libs. (#1439508)

2005-11-27  Pat Thoyts  <patthoyts@users.sourceforge.net>
